# todo_list

./: README.md  pyproject.toml
todo_list/: LICENSE  README.md  config.py  pyproject.toml  settings.toml
todo_list/src/todo_list/: __init__.py  __main__.py  config.py
todo_list/src/todo_list/data/: MiLista.csv  Unnamed.csv
todo_list/src/todo_list/methods/: file_functions.py  todo_commands.py
todo_list/tests/: __init__.py
todo_list/tests/integration/: integration_testing.py
todo_list/tests/unit/: unit_testing.py
