[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["contrcf <contrf@cat.com>"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
typer = "^0.7.0"
pathlib = "^1.0.1"
datetime = "^4.7"
tabulate = "^0.9.0"
dynaconf = "^3.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
